<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.Multiplicacion.MultiplicacionFragment">

    <TextView
        android:id="@+id/TituloDePagina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ingresar_valores"/>

    <EditText
        android:id="@+id/setPrimerFactor"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/ingresa_primer_factor_valor"
        android:inputType="number"
        android:maxLength="5"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/multiplicacion"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/Multiplicacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38" />

        <EditText
            android:id="@+id/setSegundoFactor"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/ingresa_el_segundo_factor"
            android:inputType="number"
            android:maxLength="5"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38"
            android:autofillHints="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelar"
            android:layout_width="210dp"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:text="Cancelar"
            android:textSize="15sp"
            android:layout_marginEnd="2.5dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Aceptar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="210dp"
            android:layout_height="89dp"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="1"
            android:text="Aceptar"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>